fixes for sonar